[gd_scene load_steps=15 format=3 uid="uid://cqq456vxpjux5"]

[ext_resource type="Script" uid="uid://cjn48mkgmnq0m" path="res://scripts/fase_1_1.gd" id="1_diyvg"]
[ext_resource type="Texture2D" uid="uid://d4fb34s5wwsfu" path="res://assets/backgrounds/background.png" id="2_a1jf1"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_7hfkw"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="4_1llgs"]
[ext_resource type="Texture2D" uid="uid://n2nyl5aulady" path="res://assets/b.png" id="5_pn2g1"]
[ext_resource type="Texture2D" uid="uid://b88sc5gs8g157" path="res://assets/explicacao 11.png" id="6_jc8ux"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="7_hy1hf"]
[ext_resource type="Texture2D" uid="uid://st3xwrspiyo4" path="res://assets/explicacao1_1.png" id="8_civue"]
[ext_resource type="Texture2D" uid="uid://nbvlyiiopgsn" path="res://assets/computador.png" id="9_hy1hf"]
[ext_resource type="Texture2D" uid="uid://cdyv2dx1ptl1i" path="res://assets/maca.png" id="10_opatp"]
[ext_resource type="Texture2D" uid="uid://ds7nb7uuc16xa" path="res://assets/celular.png" id="11_jc8ux"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="12_hy1hf"]
[ext_resource type="Texture2D" uid="uid://2sdyfamy2sda" path="res://assets/botao_recomecar.png" id="12_jc8ux"]
[ext_resource type="Texture2D" uid="uid://bh836apgwxtye" path="res://assets/botao voltar.png" id="13_opatp"]

[node name="Fase11" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_diyvg")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a1jf1")

[node name="explicacao_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="explicacaopng" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 416.0
offset_bottom = 96.0
texture = ExtResource("3_7hfkw")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/explicacaopng"]
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 313.0
offset_bottom = 61.0
texture = ExtResource("4_1llgs")

[node name="texto_explicativo" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 119.0
offset_top = 112.0
offset_right = 1049.0
offset_bottom = 482.0
texture = ExtResource("5_pn2g1")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/texto_explicativo"]
layout_mode = 0
offset_left = 38.0
offset_top = 55.0
offset_right = 899.0
offset_bottom = 309.0
texture = ExtResource("6_jc8ux")

[node name="button_continuar" type="TextureButton" parent="explicacao_container"]
layout_mode = 0
offset_left = 376.0
offset_top = 480.0
offset_right = 776.0
offset_bottom = 560.0
texture_normal = ExtResource("3_7hfkw")
stretch_mode = 0

[node name="continuar" type="TextureRect" parent="explicacao_container/button_continuar"]
layout_mode = 0
offset_left = 104.0
offset_top = 11.0
offset_right = 296.0
offset_bottom = 51.0
texture = ExtResource("7_hy1hf")

[node name="exercicio_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="instrucao" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_left = 145.0
offset_top = 20.0
offset_right = 1032.0
offset_bottom = 176.0
texture = ExtResource("5_pn2g1")

[node name="TextureRect" type="TextureRect" parent="exercicio_container/instrucao"]
layout_mode = 0
offset_left = 57.0
offset_top = 40.0
offset_right = 822.0
offset_bottom = 100.0
texture = ExtResource("8_civue")

[node name="itens_container" type="HBoxContainer" parent="exercicio_container"]
layout_mode = 0
offset_left = 257.0
offset_top = 302.0
offset_right = 896.0
offset_bottom = 520.0

[node name="item_computador" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 2
texture_normal = ExtResource("9_hy1hf")

[node name="item_maca" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 2
texture_normal = ExtResource("10_opatp")

[node name="item_celular" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 2
texture_normal = ExtResource("11_jc8ux")

[node name="feedback_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 548.0
offset_top = 272.0
offset_right = 588.0
offset_bottom = 295.0

[node name="button_continuar" type="TextureButton" parent="exercicio_container"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.4
anchor_bottom = 0.2
offset_left = 448.0
offset_top = 484.0
offset_right = 698.0
offset_bottom = 554.0
texture_normal = ExtResource("3_7hfkw")

[node name="TextureRect" type="TextureRect" parent="exercicio_container/button_continuar"]
layout_mode = 0
offset_left = 48.0
offset_top = 10.0
offset_right = 218.0
offset_bottom = 50.0
texture = ExtResource("7_hy1hf")

[node name="button_restart" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 928.0
offset_top = 573.0
offset_right = 1186.0
offset_bottom = 643.0
texture_normal = ExtResource("12_jc8ux")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_hy1hf")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_left = 409.0
offset_top = 207.0
offset_right = 641.0
offset_bottom = 399.0

[node name="voltar_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 578.0
offset_right = 209.0
offset_bottom = 624.0
texture_normal = ExtResource("13_opatp")

[connection signal="pressed" from="voltar_button" to="." method="_on_voltar_button_pressed"]
